--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "*.html": "html",
         "stdio.h": "c",
         "string.h": "c"
-    }
+    },
+    "python.analysis.typeCheckingMode": "basic"
 }
